p3/config/argocd_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  labels:
    app: argocd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
# ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/argocd"
        backend:
          service:
            name: argocd-server
            port:
              number: 80
